WebRTC DataChannel id of initiator not set https://bugs.webkit.org/show_bug.cgi?id=184688 rdar://problem/95636476

Reviewed by Eric Carlson.

Compute channel ID based on backend channel.
We store the ID before stopping as ID should not be mutated when stopping the channel.
Tightening of createDataChannel options validation to better align with the spec.
A follow-up patch should further improve error reporting when creating the data channel backend.

Covered by updated and rebased tests.

* LayoutTests/webrtc/datachannel/creation-expected.txt:
* LayoutTests/webrtc/datachannel/creation.html:
* LayoutTests/imported/w3c/web-platform-tests/webrtc/RTCDataChannel-id-expected.txt:
* LayoutTests/imported/w3c/web-platform-tests/webrtc/RTCPeerConnection-createDataChannel-expected.txt:
* Source/WebCore/Modules/mediastream/RTCDataChannel.cpp:
(WebCore::RTCDataChannel::id const):
(WebCore::RTCDataChannel::stop):
* Source/WebCore/Modules/mediastream/RTCDataChannel.h:
* Source/WebCore/Modules/mediastream/RTCPeerConnection.cpp:
(WebCore::RTCPeerConnection::createDataChannel):
* Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCDataChannelHandler.cpp:
(WebCore::LibWebRTCDataChannelHandler::id const):
* Source/WebCore/Modules/mediastream/libwebrtc/LibWebRTCDataChannelHandler.h:
* Source/WebCore/platform/mediastream/RTCDataChannelHandler.h:
(WebCore::RTCDataChannelHandler::id const):

Canonical link: https://commits.webkit.org/251795@main